--- a/_posts/2014-09-21-pbjs.md
+++ b/_posts/2014-09-21-pbjs.md
@@ -2,7 +2,7 @@
 layout: post
 category: conferences
 title: Powered by Java!..script.
-tags: [javascript, tech, conferences, node, mobile, html5, microservices]
+tags: [javascript, tech, conferences, node, mobile, html5, microservices, strangeloop]
 ---
 
 ![Java -- The Future](/images/pbjs.jpg)
