One of probably many typos

--- a/_posts/2014-09-21-pbjs.md
+++ b/_posts/2014-09-21-pbjs.md
@@ -11,7 +11,7 @@ The [Manning Powered by Javascript](http://www.manning.com/poweredbyjavascript/)
 By the end of the day, it was clear:
 > Javascript can live everywhere today.
 
-Dan Shaw (@dshaw) started the day off with an overview of Node.js and it's potential to introduce
+Dan Shaw (@dshaw) started the day off with an overview of Node.js and its potential to introduce
 Javascript to every level of an application's tech stack.
 He described himself as previously being a _"mid-tier"_ developer where he primarily worked on
 applications with a Java backend and Javascript front-ends.
