--- a/_posts/2014-09-21-pbjs.md
+++ b/_posts/2014-09-21-pbjs.md
@@ -14,9 +14,9 @@ By the end of the day, it was clear:
 Dan Shaw (@dshaw) started the day off with an overview of Node.js and its potential to introduce
 Javascript to every level of an application's tech stack.
 He described himself as previously being a _"mid-tier"_ developer where he primarily worked on
-applications with a Java backend and Javascript front-ends.
+applications with a Java back-end and Javascript front-ends.
 
-Dan described Javascript as a beauty and a beast because it's a approchable language, given that
+Dan described Javascript as a beauty and a beast because it's a approachable language, given that
 the cycle time between ideation and realization is very tight, but the time to "level-up" in proficiency is very long.
 
 The meat of Dan's talk focused on one of the biggest engineering challenges we face in building web applications: *dealing with legacy and monolithic services* that are most often written in Java or PHP.
@@ -27,8 +27,8 @@ Dan described this as a big cause of delaying an application launch anywhere fro
 ### Front-end back-end
 
 What Dan proposes is to build a Node "front-end back-end" as a middle tier between the legacy monolith to deliver front-end assets.
-Like most microservices, this middle tier allows us separate concerns between the front-end and backend data.
-Given that backend data stores only evolve when the business domain changes, an event that rarely occurs, we have the ability to change the way front-end assets evolve quickly and often.
+Like most micro-services, this middle tier allows us separate concerns between the front-end and back-end data.
+Given that back-end data stores only evolve when the business domain changes, an event that rarely occurs, we have the ability to change the way front-end assets evolve quickly and often.
 
 ### Reduced context-switching
 My eyes lit up when Dan presented this idea, I know the feeling of context-switching between Java and Javascript all too well.
@@ -45,11 +45,13 @@ Javascript can live everywhere. I saw many examples where developers have been c
 For example: my neighbor, Tomomi Imura ([@girlie_mac](https://twitter.com/girlie_mac)), demo-ed two applications that she created for fun to demonstrate the ability to hook into device APIs to use what's available in the browser.
 The first one was [Sushi Compass](http://vimeo.com/92208773) and the second was [CoreMob](https://github.com/coremob/camera).
 The major APIs leveraged among both were the phone's camera and GPS, LocalStorage/IndexDB, and File APIs to read and write.
-Another exciting example was @jergason's use of the Audio APIs to drop some beats and make [DOMstep](http://youtu.be/QAwbjMdXj-Y).
+Another exciting example was Jamison Dance's (@jergason) use of the Audio APIs to drop some beats and make [DOMstep](http://youtu.be/QAwbjMdXj-Y).
 
-Caching files locally also brough upon the notion of creating web applications without the need for a server.
-[DreamWriter.io](http://dreamwriter.io), for example, manages all user interaction with the client (browser) before ever having to communicate with a server -- and in Robert Feldman's (@rtfeldman) case, the only server he needed to communicate with was Dropbox, a third-party service.
-The biggest benefit of these near-native apps is the fact that there's no need to go through an installation process on both mobile and desktop. On desktop, however, Robert Feldman noted that the fluidity of context switching to a web app introduces a few extra steps, this being tabbing to a browser window and THEN a tab versus a native container.
+Caching files locally also brought upon the notion of creating web applications without the need for a server.
+[DreamWriter.io](http://dreamwriter.io), for example, manages all user interaction with the client (browser) before ever
+having to communicate with a server -- and in Robert Feldman's (@rtfeldman) case, the only server he needed to communicate with was Dropbox, a third-party service.
+The biggest benefit of these near-native apps is the fact that there's no need to go through an installation process on both mobile and desktop. On desktop, however, Robert Feldman noted that the fluidity of context switching to a web app
+introduces a few extra steps, this being tabbing to a browser window and THEN a tab versus a native container.
 
 Overall, my impressions of Powered by Javascript were great. It got me thinking of ways microservices can done differently in addition to motivating me to hone my javascript skills to
 build more web applications. There are other sessions that also impressed me during the day, but I'll save those for another post.
