Additional refactoring, this time around the post layout and index list

--- a/_posts/2015-04-03-jest.md
+++ b/_posts/2015-04-03-jest.md
@@ -23,7 +23,7 @@ After some reflection, we decided that using a boilerplate with a ton of depende
 
 Our Jest config started getting complicated as time went on and it was clear that we had a lot of dev dependencies to be cognizant of to un-mock.
 
-<pre>var jestConfig = {
+<pre class="terminal">var jestConfig = {
 		rootDir: '.',
 		testPathDirs: ['<rootDir>/src/\_\_tests\_\_/client/'],
 		scriptPreprocessor: "<rootDir>/node\_modules/babel-jest",
